force-app/main/default/objects/Opportunity_Renewal_Threshold_Days__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                    <default>true</default>
                    <label>Individual</label>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_To__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Generation_Threshold_Days__c</fullName>
        <description>Number of days for proposal creation</description>
        <label>Renewal Generation Threshold Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Reminder_Threshold_Days__c</fullName>
        <description>Number of days for reminder notification to Primary Contact on Opportunity</description>
        <label>Renewal Reminder Threshold Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <description>Number of days for Opportunity Sale</description>
        <label>Renewal Execution Threshold Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Renewal Threshold Days</label>
    <pluralLabel>Opportunity Renewal Threshold Days</pluralLabel>
</CustomObject>